# raylib-cpp-template

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: game.h
src/: main.cpp  test.cpp
